[gd_scene load_steps=32 format=3 uid="uid://ckhc8534o4tv1"]

[ext_resource type="Texture2D" uid="uid://ckeewqbper3fh" path="res://Assets/tilemap_packed.png" id="1_dvinv"]
[ext_resource type="Script" path="res://Player/Player.gd" id="1_t0s6d"]
[ext_resource type="PackedScene" uid="uid://b83k0apr5wj8h" path="res://Player/HPIcon.tscn" id="3_x3xnu"]
[ext_resource type="LabelSettings" uid="uid://dml0yaq3vtm3a" path="res://Assets/Fonts/FontSmall.tres" id="4_ffu6d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_02o54"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxjt"]
atlas = ExtResource("1_dvinv")
region = Rect2(16, 88, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm1wg"]
atlas = ExtResource("1_dvinv")
region = Rect2(8, 88, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk6ng"]
atlas = ExtResource("1_dvinv")
region = Rect2(8, 96, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk0n2"]
atlas = ExtResource("1_dvinv")
region = Rect2(0, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieu6"]
atlas = ExtResource("1_dvinv")
region = Rect2(0, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wptrb"]
atlas = ExtResource("1_dvinv")
region = Rect2(0, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwifu"]
atlas = ExtResource("1_dvinv")
region = Rect2(0, 96, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qhj0"]
atlas = ExtResource("1_dvinv")
region = Rect2(0, 88, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhjhq"]
atlas = ExtResource("1_dvinv")
region = Rect2(8, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgkrk"]
atlas = ExtResource("1_dvinv")
region = Rect2(16, 48, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_suqgl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxjt")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_xm1wg")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wk6ng")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 7.0,
"texture": SubResource("AtlasTexture_vk0n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieu6")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wptrb")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieu6")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_mwifu")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0qhj0")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhjhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgkrk")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tuja"]
atlas = ExtResource("1_dvinv")
region = Rect2(16, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bje66"]
atlas = ExtResource("1_dvinv")
region = Rect2(24, 80, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_o70bx"]
atlas = ExtResource("1_dvinv")
region = Rect2(32, 80, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_us2tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tuja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bje66")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_o70bx")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_o70bx")
}],
"loop": true,
"name": &"attack_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xaics"]
size = Vector2(5, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kng5"]
atlas = ExtResource("1_dvinv")
region = Rect2(48, 32, 8, 8)

[sub_resource type="Animation" id="Animation_0j5eh"]
resource_name = "died"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"respawn"
}]
}

[sub_resource type="Animation" id="Animation_u2uus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoMove:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/InfoDash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/InfoAttack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/InfoDoubleJump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/InfoKeyGet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/InfoDied:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/InfoWin:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/InfoNeedKey:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_enyd7"]
resource_name = "show_dash"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoDash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_6jor1"]
resource_name = "show_jump_double"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoDoubleJump:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_202km"]
resource_name = "show_key"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoKeyGet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ckapr"]
resource_name = "show_key_needed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoNeedKey:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_pe3u0"]
resource_name = "hide_move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoMove:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/InfoAttack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nculj"]
resource_name = "hide_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/InfoAttack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xbqgy"]
_data = {
"RESET": SubResource("Animation_u2uus"),
"died": SubResource("Animation_0j5eh"),
"hide_attack": SubResource("Animation_nculj"),
"hide_move": SubResource("Animation_pe3u0"),
"show_dash": SubResource("Animation_enyd7"),
"show_jump_double": SubResource("Animation_6jor1"),
"show_key": SubResource("Animation_202km"),
"show_key_needed": SubResource("Animation_ckapr")
}

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_t0s6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_02o54")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 8.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.13
drag_top_margin = 0.13
drag_right_margin = 0.13
drag_bottom_margin = 0.13

[node name="PlayerSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_suqgl")
animation = &"idle"

[node name="WeaponSprite2DRight" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -1)
sprite_frames = SubResource("SpriteFrames_us2tv")
animation = &"empty"

[node name="WeaponSprite2DLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -1)
sprite_frames = SubResource("SpriteFrames_us2tv")
animation = &"empty"
flip_h = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.34
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackCast" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_xaics")
target_position = Vector2(10, 0)
collision_mask = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 28.0
offset_bottom = 8.0
color = Color(1, 0, 0.301961, 0.0980392)

[node name="HP1" parent="CanvasLayer/ColorRect" instance=ExtResource("3_x3xnu")]
layout_mode = 2
offset_left = 1.0
offset_right = 9.0
offset_bottom = 8.0

[node name="HP2" parent="CanvasLayer/ColorRect" instance=ExtResource("3_x3xnu")]
layout_mode = 2
offset_left = 10.0
offset_right = 18.0
offset_bottom = 8.0

[node name="HP3" parent="CanvasLayer/ColorRect" instance=ExtResource("3_x3xnu")]
layout_mode = 2
offset_left = 19.0
offset_right = 27.0
offset_bottom = 8.0

[node name="Key" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_bottom = 9.0
grow_horizontal = 0
color = Color(1, 0.639216, 0, 0.192157)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Key"]
layout_mode = 1
offset_left = 1.0
offset_right = 9.0
offset_bottom = 8.0
texture = SubResource("AtlasTexture_7kng5")

[node name="InfoMove" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 21.0
text = "MOVE
WSAD"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoDash" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 23.0
text = "DASH
SHIFT"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoAttack" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 23.0
text = "ATTACK
CLICK"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoDoubleJump" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 23.0
text = "DOUBLE 
JUMP!"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoKeyGet" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 23.0
text = "FOUND
KEY!"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoNeedKey" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 23.0
text = "NEED
KEY!"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1

[node name="InfoDied" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 64.0
text = "YOU DIED!"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoWin" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 64.0
offset_bottom = 64.0
text = "YOU WON!"
label_settings = ExtResource("4_ffu6d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xbqgy")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
